packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-013.ttrp
// expect: TTRP-SQL-013
container c target erp_pg """sql
SELECT id FROM a NATURAL JOIN b
"""
